button added in storyboard

--- a/My_Fm_App/Base.lproj/Main.storyboard
+++ b/My_Fm_App/Base.lproj/Main.storyboard
@@ -25,9 +25,20 @@
                                 <state key="normal" title="Button"/>
                                 <buttonConfiguration key="configuration" style="plain" title="Button"/>
                             </button>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="twW-kE-gAR">
+                                <rect key="frame" x="160" y="543" width="67" height="31"/>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="filled" title="Button"/>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="twW-kE-gAR" secondAttribute="bottom" constant="288" id="5iy-mm-Uqo"/>
+                            <constraint firstItem="twW-kE-gAR" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="160" id="Cnx-y6-Wgk"/>
+                            <constraint firstItem="twW-kE-gAR" firstAttribute="top" secondItem="MIb-V8-Ni3" secondAttribute="bottom" constant="118" id="Vmz-X9-NKk"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="twW-kE-gAR" secondAttribute="trailing" constant="187" id="iaP-0g-jom"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
